# assistant

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  config.json  kei_multicore.json  output  sample_query.json  sample_response.json
assets/: help.txt
assets/claude/: system_prompt.txt
assets/processed_pricelists/: kei_armoured_lt.json  kei_multicore.json  kei_multicore_july_2025.json  kei_single_core.json  kei_single_core_july_2025.json  polycab_armoured_lt.json  polycab_flexible_cables.json
migrations/: add_conversations.sql  table_creation_and_init.sql
src/: lib.rs  main.rs
src/claude/: mod.rs
src/communication/: error_alert.rs  error_handler.rs  mod.rs  price_alert.rs  session_helpers.rs  telegram.rs  websocket.rs  whatsapp.rs
src/communication/whatsapp/: file_serve.rs  message_sender.rs  mod.rs  webhook_validation.rs  whatsapp_helpers.rs
src/configuration/: mod.rs
src/core/: cache.rs  health_check.rs  http.rs  http_server.rs  mod.rs  service_manager.rs
src/database/: errors.rs  mod.rs
src/database/services/: cost.rs  mod.rs  session.rs  user.rs
src/database/types/: cost.rs  mod.rs  session.rs  user.rs
src/llm/: mod.rs
src/llm/llm_providers/: claude.rs  groq.rs  mod.rs
src/ocr/: mod.rs
src/pdf/: mod.rs
src/prices/: item_prices.rs  mod.rs  price_list.rs  utils.rs
src/prices/item_prices/: impls.rs  mod.rs  types.rs
src/query/: mod.rs
src/quotation/: mod.rs  types.rs
src/stock/: mod.rs
src/transcription/: mod.rs
tests/test_files/: pricelist.json  response.txt  sample_query2.json  sample_response.json
