[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
image = "0.24"
printpdf = {version = "0.5.0", features = ["embedded_images"]}
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.139"
scraper = "0.23.1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version ="1.47.0", features = ["time", "sync", "macros", "rt-multi-thread"] }
thiserror = "2.0.12"