[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
aws-config = "1.8.5"
aws-sdk-textract = "1.83.0"
axum = { version="0.8.4", features = ["macros", "ws"] }
base64 = "0.22.1"
chrono = { version="0.4.41", features = ["serde"] } 
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
hmac = "0.12.1"
image = "0.24"
moka = { version ="0.12.10", features = ["sync"] }
printpdf = {version = "0.5.0", features = ["embedded_images"]}
postgrest = "1.6.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.139"
scraper = "0.23.1"
sha1 = "0.10.6"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version ="1.47.0", features = ["full"] }
tower = "0.5.2"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[dev-dependencies]
mockito = "1.5.0"
serial_test = "3.1.1"